@@ -12,7 +12,7 @@
 	</parent>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<graal.version>22.3.0</graal.version>
+		<graal.version>25.0.2</graal.version>
 		<surefireArgLine />
 	</properties>
 	<profiles>
@@ -21,104 +21,42 @@
 			<activation><os><name>Linux</name></os></activation>
 			<properties>
 				<executable.name>hedgehog.bin</executable.name>
-				<extraNativeOption>-H:+StaticExecutableWithDynamicLibC</extraNativeOption>
 			</properties>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.graalvm.buildtools</groupId>
+						<artifactId>native-maven-plugin</artifactId>
+						<configuration>
+							<buildArgs combine.children="append">
+								<buildArg>--static-nolibc</buildArg>
+							</buildArgs>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 		<profile>
 			<id>Windows</id>
 			<activation><os><family>Windows</family></os></activation>
 			<properties>
 				<executable.name>hedgehog</executable.name>
-				<extraNativeOption>-DNOP=true</extraNativeOption>
-                                <url>https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-${graal.version}/graalvm-ce-java17-windows-amd64-${graal.version}.zip</url>
-                                <platform>windows</platform>
-                                <unzipLocation>${basedir}\target\unziped</unzipLocation>
-                                <downloadName>graal.zip</downloadName>
-                                <downloadLocation>${basedir}\target\download/</downloadLocation>
-                                <localInstaller>${unzipLocation}\graalvm-ce-java17-${graal.version}\bin\gu.cmd</localInstaller>
-				<arthur.nativeImage>${unzipLocation}\graalvm-ce-java17-${graal.version}\bin\native-image.cmd</arthur.nativeImage>
 			</properties>
-			<build>
-				<pluginManagement>
-					<plugins>
-						<plugin>
-							<groupId>com.googlecode.maven-download-plugin</groupId>
-							<artifactId>download-maven-plugin</artifactId>
-							<executions>
-								<execution>
-									<phase>process-resources</phase>
-									<goals>
-										<goal>wget</goal>
-									</goals>
-									<configuration>
-										<url>${url}</url>
-										<outputFileName>${downloadName}</outputFileName>
-										<outputDirectory>${downloadLocation}</outputDirectory>
-									</configuration>
-								</execution>
-							</executions>
-						</plugin>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-antrun-plugin</artifactId>
-							<executions>
-								<execution>
-									<id>default-cli</id>
-									<phase>package</phase>
-									<goals>
-										<goal>run</goal>
-									</goals>
-									<configuration>
-										<target>
-											<unzip src="${downloadLocation}${downloadName}" dest="${unzipLocation}" />
-										</target>
-									</configuration>
-								</execution>
-							</executions>
-						</plugin>
-						<plugin>
-							<groupId>org.codehaus.mojo</groupId>
-							<artifactId>exec-maven-plugin</artifactId>
-							<executions>
-								<execution>
-									<id>native-image-install</id>
-									<phase>package</phase>
-									<goals>
-										<goal>exec</goal>
-									</goals>
-									<configuration>
-										<executable>${localInstaller}</executable>
-										<commandlineArgs>install native-image</commandlineArgs>
-									</configuration>
-								</execution>
-							</executions>
-						</plugin>
-					</plugins>
-				</pluginManagement>
-			</build>
 		</profile>
 		<profile>
 			<id>MacOS</id>
 			<activation><os><family>Mac</family></os></activation>
 			<properties>
 				<executable.name>hedgehog.bin</executable.name>
-				<extraNativeOption>-DNOP=true</extraNativeOption>
-                                <platform>macosx64</platform>
-				<arthur.nativeImage>native-image</arthur.nativeImage>
-				<arthur.buildStaticImage>false</arthur.buildStaticImage>
 			</properties>
 		</profile>
 	</profiles>
 	<dependencies>
 		<dependency>
 			<groupId>org.graalvm.sdk</groupId>
-			<artifactId>graal-sdk</artifactId>
+			<artifactId>nativeimage</artifactId>
 			<version>${graal.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.graalvm.nativeimage</groupId>
-			<artifactId>svm</artifactId>
-			<version>${graal.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.unigrid.hedgehog</groupId>
@@ -192,7 +130,7 @@
 			<plugin>
 				<groupId>org.tentackle</groupId>
 				<artifactId>tentackle-jlink-maven-plugin</artifactId>
-				<version>17.12.0.0</version>
+				<version>25.19.0.0</version>
 				<configuration>
 					<mainClass>org.unigrid.hedgehog.Hedgehog</mainClass>
 					<stripDebug>true</stripDebug>
@@ -221,62 +159,45 @@
 				</executions>
 			</plugin>
 			<plugin>
-				<groupId>com.googlecode.maven-download-plugin</groupId>
-				<artifactId>download-maven-plugin</artifactId>
-				<version>1.6.8</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<version>3.1.0</version>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>3.1.0</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.geronimo.arthur</groupId>
-				<artifactId>arthur-maven-plugin</artifactId>
-				<version>1.0.5</version>
+				<groupId>org.graalvm.buildtools</groupId>
+				<artifactId>native-maven-plugin</artifactId>
+				<version>1.1.13</version>
+				<extensions>true</extensions>
 				<configuration>
-					<main>org.unigrid.hedgehog.nativeimage.NativeImage</main>
-					<graalVersion>${graal.version}.r17</graalVersion>
-					<allowIncompleteClasspath>true</allowIncompleteClasspath>
+					<imageName>${executable.name}</imageName>
+					<mainClass>org.unigrid.hedgehog.nativeimage.NativeImage</mainClass>
+					<metadataRepository>
+						<enabled>false</enabled>
+					</metadataRepository>
+					<!-- The default classpath would carry the whole application with its
+					     picocli-generated reflection metadata and pull it into the image;
+					     the launcher needs only these. -->
 					<classpath>
-						<classpath>${org.unigrid.hedgehog:hedgehog-common:jar}</classpath>
-						<classpath>${org.graalvm.sdk:graal-sdk:jar}</classpath>
-						<classpath>${project.build.directory}/classes</classpath>
-						<classpath>${org.apache.commons:commons-compress:jar}</classpath>
-						<classpath>${org.apache.commons:commons-lang3:jar}</classpath>
-						<classpath>${org.apache.commons:commons-exec:jar}</classpath>
-						<classpath>${commons-io:commons-io:jar}</classpath>
-						<classpath>${net.harawata:appdirs:jar}</classpath>
-						<classpath>${org.slf4j:slf4j-api:jar}</classpath>
-						<classpath>${ch.qos.logback:logback-core:jar}</classpath>
-						<classpath>${ch.qos.logback:logback-classic:jar}</classpath>
-						<classpath>${net.java.dev.jna:jna-platform:jar}</classpath>
-						<classpath>${net.java.dev.jna:jna:jar}</classpath>
+						<param>${project.build.directory}/classes</param>
+						<param>${org.unigrid.hedgehog:hedgehog-common:jar}</param>
+						<param>${org.apache.commons:commons-compress:jar}</param>
+						<param>${org.apache.commons:commons-lang3:jar}</param>
+						<param>${org.apache.commons:commons-exec:jar}</param>
+						<param>${commons-io:commons-io:jar}</param>
+						<param>${net.harawata:appdirs:jar}</param>
+						<param>${org.slf4j:slf4j-api:jar}</param>
+						<param>${ch.qos.logback:logback-core:jar}</param>
+						<param>${ch.qos.logback:logback-classic:jar}</param>
+						<param>${net.java.dev.jna:jna-platform:jar}</param>
+						<param>${net.java.dev.jna:jna:jar}</param>
 					</classpath>
-					<otherFiles>
-						<otherFile>${project.build.directory}/${project.artifactId}-${project.version}-jlink.zip</otherFile>
-					</otherFiles>
-					<output>${project.build.directory}/${executable.name}</output>
-					<customOptions>
-						<customOption>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core=ALL-UNNAMED</customOption>
-						<customOption>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=ALL-UNNAMED</customOption>
-						<customOption>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.hosted=ALL-UNNAMED</customOption>
-						<customOption>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.hosted.c=ALL-UNNAMED</customOption>
-						<customOption>--features=org.unigrid.hedgehog.nativeimage.BundleFeature</customOption>
-						<customOption>-H:IncludeResources=application.properties</customOption>
-						<customOption>${extraNativeOption}</customOption>
-					</customOptions>
+					<buildArgs>
+						<buildArg>--features=org.unigrid.hedgehog.nativeimage.BundleFeature</buildArg>
+						<buildArg>-march=compatibility</buildArg>
+						<buildArg>-H:+ReportExceptionStackTraces</buildArg>
+					</buildArgs>
 				</configuration>
 				<executions>
 					<execution>
+						<id>build-launcher</id>
 						<phase>package</phase>
 						<goals>
-							<goal>native-image</goal>
+							<goal>compile-no-fork</goal>
 						</goals>
 					</execution>
 				</executions>
@@ -311,6 +232,10 @@
 			<resource>
 				<directory>../application/src/main/resources-filtered</directory>
 				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>false</filtering>
 			</resource>
 		</resources>
 	</build>
